[gd_scene load_steps=12 format=3 uid="uid://bkn8idh1nrk0l"]

[ext_resource type="Script" path="res://bitFolder/ui.gd" id="1_b7421"]
[ext_resource type="Texture2D" uid="uid://c27lis8oc1ee7" path="res://sprites/hud/numbers.png" id="2_7bp3y"]
[ext_resource type="Script" path="res://scripts/misc/score_display_high.gd" id="5_gs7pq"]
[ext_resource type="Texture2D" uid="uid://c0u0mvafhoe5c" path="res://sprites/hud/highscore.png" id="6_bkrmx"]
[ext_resource type="Texture2D" uid="uid://dixtic5ga0gkg" path="res://sprites/hud/NEW.PNG" id="7_bo6gw"]
[ext_resource type="Texture2D" uid="uid://d2p3ree4ks111" path="res://sprites/hud/exclamationpoint.png" id="8_64n7y"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sf8nh"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.988235, 0.988235, 0.988235, 0.823529)
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mtrai"]
bg_color = Color(0.843137, 0.14902, 0.219608, 1)
border_color = Color(0.988235, 0.988235, 0.988235, 1)
corner_detail = 1
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qn0xh"]
bg_color = Color(0, 0.988235, 0.952941, 1)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_afry5"]
texture = ExtResource("2_7bp3y")
texture_region_size = Vector2i(20, 24)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0

[sub_resource type="TileSet" id="TileSet_l25qe"]
tile_size = Vector2i(20, 24)
sources/0 = SubResource("TileSetAtlasSource_afry5")

[node name="UI" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_b7421")

[node name="Container" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayUI" type="MarginContainer" parent="Container"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="Container/PlayUI"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 30

[node name="HPBox" type="VBoxContainer" parent="Container/PlayUI/HBoxContainer"]
layout_mode = 2

[node name="HP" type="ProgressBar" parent="Container/PlayUI/HBoxContainer/HPBox"]
custom_minimum_size = Vector2(200, 10)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_sf8nh")
theme_override_styles/fill = SubResource("StyleBoxFlat_mtrai")
max_value = 12.0
step = 1.0
value = 12.0
show_percentage = false

[node name="Label" type="Label" parent="Container/PlayUI/HBoxContainer/HPBox"]
layout_mode = 2
text = "Health"

[node name="InfBox" type="VBoxContainer" parent="Container/PlayUI/HBoxContainer"]
layout_mode = 2

[node name="Radiation" type="ProgressBar" parent="Container/PlayUI/HBoxContainer/InfBox"]
custom_minimum_size = Vector2(200, 10)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_sf8nh")
theme_override_styles/fill = SubResource("StyleBoxFlat_qn0xh")
max_value = 200.0
show_percentage = false

[node name="Label" type="Label" parent="Container/PlayUI/HBoxContainer/InfBox"]
layout_mode = 2
text = "Radiation"

[node name="MaxScore" type="Label" parent="Container/PlayUI"]
layout_mode = 2
size_flags_vertical = 8
text = "Score: "

[node name="PauseMenu" type="PanelContainer" parent="Container"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Container/PauseMenu"]
layout_mode = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 100

[node name="VBoxContainer" type="VBoxContainer" parent="Container/PauseMenu/MarginContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="Label" type="Label" parent="Container/PauseMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "PAUSE MENU"

[node name="Resume" type="Button" parent="Container/PauseMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="Restart" type="Button" parent="Container/PauseMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Retry"

[node name="Back" type="Button" parent="Container/PauseMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Back to main menu"

[node name="Exit" type="Button" parent="Container/PauseMenu/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
text = "Exit"

[node name="ScoreDisplayHigh" type="TileMapLayer" parent="."]
visible = false
position = Vector2(409, 283)
tile_map_data = PackedByteArray(0, 0, 255, 255, 255, 255, 0, 0, 0, 0, 0, 0, 0, 0)
tile_set = SubResource("TileSet_l25qe")
script = ExtResource("5_gs7pq")
color_lame = Color(0.956863, 0.376471, 0.211765, 1)
color_cool = Color(1, 0.823529, 0.247059, 1)

[node name="Highscore" type="Sprite2D" parent="ScoreDisplayHigh"]
position = Vector2(-8, 12.5)
texture = ExtResource("6_bkrmx")

[node name="New" type="Sprite2D" parent="ScoreDisplayHigh"]
visible = false
position = Vector2(-83, 20.5)
texture = ExtResource("7_bo6gw")

[node name="Exclamationpoint" type="Sprite2D" parent="ScoreDisplayHigh"]
visible = false
position = Vector2(50, 0.5)
texture = ExtResource("8_64n7y")

[connection signal="pressed" from="Container/PauseMenu/MarginContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Container/PauseMenu/MarginContainer/VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="Container/PauseMenu/MarginContainer/VBoxContainer/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Container/PauseMenu/MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
